--- a/scripts/Final_Project_Script.Rmd
+++ b/scripts/Final_Project_Script.Rmd
@@ -21,17 +21,17 @@ Original_data <- read_tsv("../data_raw/e249_Plant aboveground biomass data.txt")
 ```{r}
 # Weeks 10, 6, 2, 3, 12, 7, 8, & 4 are in this section
 #Creating a new data frame to begin cleaning the data
-rawdata <- Original_data
+survey <- Original_data
 
 # Renaming the original data's columns to more appropriate names
-rawdata <- rawdata %>% 
+survey <- survey %>% 
   rename(Sample_date = 'Sample Date') %>% 
   rename(Heat_Treatment = 'Heat Treatment') %>% 
   rename(Mass_g_per_m2 = `Mass (g/m2)`) %>% 
   rename(Species_name = 'Species')
 
 # reorganizing the date column to useful numbers. This also includes creating the Day of Year column and separating the day, month, year, and getting rid of the extra columns
-rawdata <- rawdata %>%
+survey <- survey %>%
   mutate(Sample_date = as_datetime(Sample_date, format = "%m/%d/%Y %H:%M")) %>% 
   mutate(Sample_DOY = yday(Sample_date)) %>% 
   mutate(Day = day(Sample_date),
@@ -40,7 +40,7 @@ rawdata <- rawdata %>%
   select(Day, Month, Year, Sample_DOY, Plot, Heat_Treatment, Species_name, `Mass_g_per_m2`)
 
 # Changing the incorrect data in the Heat Treatment column
-rawdata <- rawdata %>%
+survey <- survey %>%
   mutate(Heat_Treatment = case_when(
     Heat_Treatment %in% c("HIgh", "high") ~ "High",
     TRUE ~ Heat_Treatment
@@ -48,7 +48,7 @@ rawdata <- rawdata %>%
   filter(!is.na(Species_name))
 
 # Changing the names of incorrectly inputted data in the Species column using case_when
-rawdata <- rawdata %>% 
+survey <- survey %>% 
   mutate(Species_name = case_when(
     Species_name == "achillea millefolium(lanulosa)" ~ "Achillea millefolium (lanulosa)",
     Species_name == "Achillea millefolium(lanulosa)" ~ "Achillea millefolium (lanulosa)",
@@ -76,27 +76,27 @@ rawdata <- rawdata %>%
     TRUE ~ Species_name))
 
 # Separating the data from the Species column to new columns that fit them better. Sep values came from ChatGPT 
-rawdata <- rawdata %>% 
+survey <- survey %>% 
   separate(Species_name, into = c("Species_name", "Prev_names"), sep = "\\-", remove = F) %>% 
   separate(Species_name, into = c("Species_name", "Other"), sep = "\\+", remove = F)
 
 # Putting the data in parentheses into the Subspecies column then getting rid of the parentheses in the Species column to clean it up. Regex came from ChatGPT
-rawdata <- rawdata %>% 
+survey <- survey %>% 
   extract(Species_name, into = "Subspecies", regex = "\\(([^)]+)\\)", remove = F) %>% 
   mutate(Species_name = str_remove(Species_name, "\\(caudata\\)|\\(lanulosa\\)|\\(major\\)|\\(supina\\)|\\(mid\\)|\\(elatior\\)"))
 
 # This code checks the actual data and looks for unique values
-rawdata %>% 
+survey %>% 
   select(Species_name) %>% 
   arrange(Species_name) %>% 
   distinct()
 
 # Creating a new column for Misc. answers that don't fit into the "normal" answers and then getting rid of the people. Regex came from ChatGPT
-rawdata <- rawdata %>%
+survey <- survey %>%
   extract(Species_name, into = "Miscellaneous", regex = "(?i)(Miscellaneous Grass|Miscellaneous forb|Miscellaneous grasses|Miscellaneous litter|Miscellaneous sp.|Unsorted biomass|Mosses & lichens|Mosses|Fungi)", remove = FALSE) %>% 
   mutate(Species_name = str_remove(Species_name, "(?i)Miscellaneous Grass|Miscellaneous forb|Miscellaneous grasses|Miscellaneous litter|Miscellaneous sp\\.|Unsorted biomass|Mosses & lichens|Mosses|Fungi"))
 
-write_csv(rawdata, "../data_clean/Rawdata.csv")
+write_csv(survey, "../data_clean/survey.csv")
 ```
 
 ## Turning the Original Data into Data for Analysis
@@ -104,7 +104,7 @@ write_csv(rawdata, "../data_clean/Rawdata.csv")
 ```{r}
 # This section contains Week 10
 # Creating the sepdata data frame and then separating the Species Name column into Genus and Species
-sepdata <- rawdata %>% 
+sepdata <- survey %>% 
   separate(Species_name, into = c("Genus", "Species"), sep = " ")
 
 # getting rid of unnecessary info in the Species column and replacing it with NA
@@ -134,17 +134,26 @@ sepdata <- sepdata %>%
 # Loading in the correct package
 library(ggplot2)
 
-# Create a graph showing the relative amount of each species
-Count_sepdata <- sepdata %>%
-  group_by(Genus, Species) %>% 
-  unite("United", c("Genus", "Species"), sep = " " )
-ggplot(Count_sepdata)+ 
-  geom_bar(aes(x = United), size = 12)+
-  theme(axis.text.x = element_text(angle = 90, hjust = 0.5))+ # used Chatgpt here
-  labs(x = "Species", y = "Number of Instances")
+# the graph that I was told about
+Count_sepdata2 <- Count_sepdata %>%
+  count(United) %>%
+  arrange(n)
+
+species_counts2 <- ggplot(Count_sepdata2, aes(x = fct_reorder(United, n), y = n)) +
+  geom_bar(stat = "identity", fill = "steelblue", width = 0.7) +
+  coord_flip() +
+  theme_classic() +
+  theme(
+    axis.text = element_text(size = 8),
+    axis.title = element_text(size = 8)
+  ) +
+  labs(x = "Species",
+       y = "Number of Instances",
+       title = "Species Occurrence Counts")
+print(species_counts2)
 
 # The above information as an image using a relative path
-ggsave("../Final Project Data/outputs/species_counts.png", height = 7, width = 12)
+ggsave("../outputs/species_counts2.png", height = 7, width = 12)
 ```
 
 ## Creating a Graph (Graph 2)
@@ -164,5 +173,5 @@ ggplot(Mass_sepdata, aes(x = United, y = lbs_per_acre, fill = Heat_Treatment, co
   labs(x = "Species", y = "Pounds per Acre")
   
 # Code that saves the ggplot into the Output Folder using a relative path
-ggsave("../Final Project Data/outputs/species_mass.png", height = 7, width = 10)
+  ggsave("../outputs/species_mass.png", height = 7, width = 10)
 ```
